[package]
name = "data-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env"] }
dittolive-ditto = "=4.14.3"
dittolive-ditto-sys = { version = "=4.14.3", features = ["download"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "json", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
