[package]
name = "turso_dart_native"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["http1"] }
hyper-rustls = { version = "0.27.9", features = [
    "rustls-native-certs",
    "http1",
    "webpki-roots",
] }
hyper-util = { version = "0.1.20", features = ["http1", "tokio"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "rt-multi-thread", "sync"] }
turso_sdk_kit = "0.6.1"
turso_sync_sdk_kit = "0.6.1"

[build-dependencies]
cbindgen = "0.29.3"

[lib]
crate-type = ["staticlib", "cdylib"]
